# seminary-management

./: Dockerfile  README.md  dev_data.json  manage.py  pyproject.toml
accounts/: admin.py  forms.py  models.py  views.py
accounts/migrations/: 0001_initial.py
church_structure/: admin.py  apps.py  models.py
church_structure/migrations/: 0001_initial.py
courses/: admin.py  models.py
courses/migrations/: 0001_initial.py
seminary_management/: asgi.py  settings.py  urls.py  wsgi.py
students/: admin.py  forms.py  models.py  urls.py  views.py
students/migrations/: 0001_initial.py
teachers/: admin.py  forms.py  models.py  urls.py  views.py
teachers/migrations/: 0001_initial.py
