[project]
name = "seminary-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.3",
    "dj-database-url>=3.0.1",
    "django>=5.2.5",
    "django-celery-beat>=2.8.1",
    "django-csp>=4.0",
    "django-debug-toolbar>=6.0.0",
    "django-redis>=6.0.0",
    "gunicorn>=23.0.0",
    "loguru>=0.7.3",
    "psycopg[binary]>=3.2.9",
    "whitenoise>=6.9.0",
]
